report4/ns/vkbo/onderneming/v0.0.6/jsonld-validation.report.md
#||# oslo-jsonld-validator   

#||# -------------------------------------  

2026-06-15T12:07:37.016Z info: Loaded 50 URI prefixes into whitelist

2026-06-15T12:07:37.123Z error: Found missing class or attribute (GeregistreerdeOrganisatie): [[urn:oslo-toolchain:95720ce982042b7641adcf5dc9f8ac1e7919d33b5ab85f710369d76164bfd263](all-organisatie.jsonld#L2945)](all-organisatie.jsonld#L156)

2026-06-15T12:07:37.124Z error: Found missing class or attribute (Veranderingsgebeurtenis): [urn:oslo-toolchain:ad8cc46e035270088a084c621cca5b959f4a176ac6ad4cd8f91d02a0ac735d43](all-organisatie.jsonld#L197)

2026-06-15T12:07:37.124Z error: Found missing class or attribute (Vestiging): [urn:oslo-toolchain:8efe4d2e55ae333e5eea4a43336168a028c18fa467255b54c301a5b0f436a3b9](all-organisatie.jsonld#L227)

2026-06-15T12:07:37.124Z error: Found missing class or attribute (Oprichting): [urn:oslo-toolchain:2b1d54a5c109cfed716d5857a68d7b8cd04f2183f00d68c3746e5fafbca63d12](all-organisatie.jsonld#L286)

2026-06-15T12:07:37.124Z error: Found missing class or attribute (identificator): [urn:oslo-toolchain:361480e48143c63af3ef9ee8c1013816f3073400a2abd8cfba3f7141c73bc45a](all-organisatie.jsonld#L1742)

2026-06-15T12:07:37.124Z error: Found missing class or attribute (datum): [urn:oslo-toolchain:9a22a50a665ab9d8bdea28d5b487ad95086746bbaed8635f6827bbaafdeb16cd](all-organisatie.jsonld#L520)

2026-06-15T12:07:37.124Z error: Found missing class or attribute (^voorkeursnaam): [urn:oslo-toolchain:0f011509e388c273c5e0904516b57043b486ab0ad6cb40e7ab92b8b8b0e238e7](all-organisatie.jsonld#L564)

2026-06-15T12:07:37.124Z error: Found missing class or attribute (^alternatieveNaam): [urn:oslo-toolchain:114c71cc21da4d2403d5a7ca04e9ab9a3d4eed7d6fb4d6a49c5d3825402ef26e](all-organisatie.jsonld#L602)

2026-06-15T12:07:37.125Z error: Found missing class or attribute (gml): [urn:oslo-toolchain:42680944cedc7e21703971a6a234cb91e1292c9d1e6777ef9066612ef2bdac6a](all-organisatie.jsonld#L646)

2026-06-15T12:07:37.125Z error: Found missing class or attribute (wkt): [urn:oslo-toolchain:3bd1a7433ee23df19d44c5244b1c120695416a3f47212a2b82b1936433538caf](all-organisatie.jsonld#L690)

2026-06-15T12:07:37.125Z error: Found missing class or attribute (administratieveEenheidNiveau1): [urn:oslo-toolchain:0d288e4cd816d03f23c2a0b38e1f68a1f8c93e8386d011cf8dab0308100abec6](all-organisatie.jsonld#L734)

2026-06-15T12:07:37.125Z error: Found missing class or attribute (administratieveEenheidNiveau2): [urn:oslo-toolchain:7cb9d5e69c763037979dda879753e297273ae7d7135c4637d1d3b06fdbf41380](all-organisatie.jsonld#L772)

2026-06-15T12:07:37.125Z error: Found missing class or attribute (adresgebied): [urn:oslo-toolchain:23e762275141498a346dea5c06ef44c8883c1b624460551eb768a4bf70924262](all-organisatie.jsonld#L810)

2026-06-15T12:07:37.125Z error: Found missing class or attribute (huisnummer): [urn:oslo-toolchain:e4b0bcb57f41504480b94d740b68fb984cef611e8e8b0bab2a8fb8e5073660f8](all-organisatie.jsonld#L942)

2026-06-15T12:07:37.125Z error: Found missing class or attribute (locatieaanduiding): [urn:oslo-toolchain:602078a04b1c7a05e1882dbbfd3a3aff980ef3a1cf06f8978088c35cfaf76d11](all-organisatie.jsonld#L1030)

2026-06-15T12:07:37.125Z error: Found missing class or attribute (locatienaam): [urn:oslo-toolchain:774d03efce61dd38a0396e252fc94ebdb0c18a67f95af545266a90a036eaf88e](all-organisatie.jsonld#L1068)

2026-06-15T12:07:37.125Z error: Found missing class or attribute (postbus): [urn:oslo-toolchain:3e203627895e721b6f623adc894c11dcc3b778af48cfc7b47bedaaac7ff34bb3](all-organisatie.jsonld#L1106)

2026-06-15T12:07:37.125Z error: Found missing class or attribute (postcode): [urn:oslo-toolchain:e72dcb1029508b5ba2fdd4f0dcce33e93e73893f03fd2dec89b6bf1d4c18f22d](all-organisatie.jsonld#L1144)

2026-06-15T12:07:37.125Z error: Found missing class or attribute (postnaam): [urn:oslo-toolchain:d355e05dc0aedac28a1a553044e3ca89780df9187f1322006874cd6b1add38b5](all-organisatie.jsonld#L1182)

2026-06-15T12:07:37.125Z error: Found missing class or attribute (straatnaam): [urn:oslo-toolchain:e9bfde1336d6288da88af4d0ab02d74242d28b7fcb98249ab5723075d37ebcb6](all-organisatie.jsonld#L1220)

2026-06-15T12:07:37.125Z error: Found missing class or attribute (volledigAdres): [urn:oslo-toolchain:081eee64572a496c46a7c0e4330f10686d8281b2b081cfdf351f286aa091522d](all-organisatie.jsonld#L1258)

2026-06-15T12:07:37.125Z error: Found missing class or attribute (inXSDDate): [urn:oslo-toolchain:762c8749a0b863902eaa022a330c17659e7025b91376562676e2373593e15357](all-organisatie.jsonld#L1302)

2026-06-15T12:07:37.125Z error: Found missing class or attribute (email): [urn:oslo-toolchain:de44d3d17b9d192298ffc92d73d15eb5c442fffaf9a6256cf36efd8b6359050e](all-organisatie.jsonld#L1340)

2026-06-15T12:07:37.126Z error: Found missing class or attribute (telefoon): [urn:oslo-toolchain:6aa53675f4eabb8e738a9c75195181ee36ac660a324d186cf6ec8a8d69ce60bf](all-organisatie.jsonld#L1378)

2026-06-15T12:07:37.126Z error: Found missing class or attribute (datumOprichting): [urn:oslo-toolchain:e6ef6fddb50f6a05d34bece4cd76bed79e5a5f10a5c325d5e7a93e48ffa0492f](all-organisatie.jsonld#L1416)

2026-06-15T12:07:37.126Z error: Found missing class or attribute (datumStopzetting): [urn:oslo-toolchain:e7e967fd4b01c74bb33f66ca27f1a4ab31eee3382e7047c784c15fdc2a141e33](all-organisatie.jsonld#L1454)

2026-06-15T12:07:37.126Z error: Found missing class or attribute (registratie): [urn:oslo-toolchain:198d3aae75ab6c1da4b296174c8d63243b460591dc303f6c6dcf209f79b1839b](all-organisatie.jsonld#L1654)

2026-06-15T12:07:37.126Z error: Found missing class or attribute (registratie): [urn:oslo-toolchain:9fc86c0f6c4d7e14d66d6cc22ecc275efb739325a6b4706a66fdb535a4026891](all-organisatie.jsonld#L2254)

2026-06-15T12:07:37.126Z error: Found missing class or attribute (^activiteit): [urn:oslo-toolchain:ae7806a6493f959ced4cd1911b2b458778a62e75a5c8a6dce5681c9181ecb4b6](all-organisatie.jsonld#L1780)

2026-06-15T12:07:37.126Z error: Found missing class or attribute (^contactinfo): [urn:oslo-toolchain:6a744ae3176e36f079b22cc80125747fce2e3996e4f3aae086ff0537e750cb51](all-organisatie.jsonld#L1825)

2026-06-15T12:07:37.126Z error: Found missing class or attribute (^status): [urn:oslo-toolchain:654a26d3785616cc137deabcc1cf52e95577a7b5aa1ae488df3af731372174cf](all-organisatie.jsonld#L1863)

2026-06-15T12:07:37.126Z error: Found missing class or attribute (reden): [urn:oslo-toolchain:0ff25f143b2fc4952d7dbdb356f107536eaa376aabd03922801638b1a9789c94](all-organisatie.jsonld#L1953)

2026-06-15T12:07:37.126Z error: Found missing class or attribute (doorhaling): [urn:oslo-toolchain:7ee49278c674f184736f3b17c1ad78b7b37d7dd4be2235401aecd0821f0dadc3](all-organisatie.jsonld#L2051)

2026-06-15T12:07:37.126Z error: Found missing class or attribute (doorhaling): [urn:oslo-toolchain:379e62b8890f26b318e4be99cb6e5947908c4328a9cce9cba709829a5f45f25c](all-organisatie.jsonld#L2171)

2026-06-15T12:07:37.126Z error: Found missing class or attribute (^tijd): [urn:oslo-toolchain:9ef720eaeadd4e3a975fac3bdcc3352903c03f0f9277ba043db55c74e67ab42f](all-organisatie.jsonld#L2089)

2026-06-15T12:07:37.126Z error: Found missing class or attribute (vestigingsAdres): [urn:oslo-toolchain:f82068c850d415c1522a98eb2d9ace33d398da76101ca66aca4c40990f3808cb](all-organisatie.jsonld#L2127)

2026-06-15T12:07:37.126Z error: Found missing class or attribute (geometrie): [urn:oslo-toolchain:fde99bc915ef9a18c0985488351ffa432f08b7bd8c8c865fa84b521c5310cd94](all-organisatie.jsonld#L2298)

2026-06-15T12:07:37.126Z error: Found missing class or attribute (^tot): [urn:oslo-toolchain:5b782dfde3f73e6246d05439471fe63ac562c010aa72920f61209181107f0e21](all-organisatie.jsonld#L2336)

2026-06-15T12:07:37.127Z error: Found missing class or attribute (^van): [urn:oslo-toolchain:b36fc8eaeb264d201f7539366b257cb958a99f489c6c63fa0f3dae280bd230d3](all-organisatie.jsonld#L2374)

2026-06-15T12:07:37.127Z error: Found missing class or attribute (adres): [urn:oslo-toolchain:8cd3bf89769aacd82d2046c67a009e9e7872199e77aa5fd0bd4ac500a4292af8](all-organisatie.jsonld#L2412)

2026-06-15T12:07:37.127Z error: Found missing class or attribute (vestigingVan): [urn:oslo-toolchain:038710791a5ceb5e6fdc7d2bb8cf7ce7d5ef64016715f9906357f8992246e524](all-organisatie.jsonld#L2494)

2026-06-15T12:07:37.127Z error: Found missing class or attribute (^heeftGeregistreerdeVestiging): [urn:oslo-toolchain:5fe639e88a96a52832e8f07439d1b87df04df5ccff5a587dd1b4d0a764ba0078](all-organisatie.jsonld#L2532)

2026-06-15T12:07:37.127Z error: Found missing class or attribute (^isVeranderdDoor): [urn:oslo-toolchain:297ed63fc962621f234b01bd90f891bf8a129e56e49eb5039f483b209a2badeb](all-organisatie.jsonld#L2576)

2026-06-15T12:07:37.127Z error: Found missing class or attribute (Geometrie): [urn:oslo-toolchain:263ecd9d893e50c5ed8ca245bfa5c9af4606ebeb745a6773127191a16341095a](all-organisatie.jsonld#L2645)

2026-06-15T12:07:37.127Z error: Found missing class or attribute (GeografischePositie): [urn:oslo-toolchain:39a0907ce6060ecfa67429be0d9e429d2e35ad95d7673b8ed43d92a6c1dbbb25](all-organisatie.jsonld#L2681)

2026-06-15T12:07:37.127Z error: Found missing class or attribute (Identificator): [urn:oslo-toolchain:d283a98068ef27c6f8f21c12a9a48f82a28484ff00a297b39be62f8333bc43ff](all-organisatie.jsonld#L2705)

2026-06-15T12:07:37.127Z error: Found missing class or attribute (Adresvoorstelling): [[urn:oslo-toolchain:56c7f1acdf28d38b6c07d1050d78678e52dfe41db55209053758c6fc89c0b365](all-organisatie.jsonld#L2735)](all-organisatie.jsonld#L3030)

2026-06-15T12:07:37.127Z error: Found missing class or attribute (TemporeleEntiteit): [urn:oslo-toolchain:62d845d5034ffa251aa752c3748579451b12e8d3401d721e6c1e98e198be2fb4](all-organisatie.jsonld#L2770)

2026-06-15T12:07:37.127Z error: Found missing class or attribute (Moment): [urn:oslo-toolchain:39b3f546caa4d79d43c369e1c79ae01b2480c3d1c25dcd9048fb6d02175c45e7](all-organisatie.jsonld#L2800)

2026-06-15T12:07:37.127Z error: Found missing class or attribute (Periode): [urn:oslo-toolchain:801183c01ebb834c90cfa2d3b31608697f9960c930091111c696c38e53e86444](all-organisatie.jsonld#L2829)

2026-06-15T12:07:37.127Z error: Found missing class or attribute (Contactinfo): [urn:oslo-toolchain:07007c84ed11ec5e456c9feb96ee57c6039a44e6f959cfe1e19e0273bb73e303](all-organisatie.jsonld#L2858)

2026-06-15T12:07:37.127Z error: Found missing class or attribute (Organisatie): [urn:oslo-toolchain:1a5d11580fc42d42bf464c4a73a9970b630c125bb102c959b57ef346f7f9e14e](all-organisatie.jsonld#L2949)

2026-06-15T12:07:37.128Z error: Found missing class or attribute (Agent): [urn:oslo-toolchain:f4d4156ba67eefb9002e9a692d143bfedf6be8564bd99cf76a99a0bb90e0a67b](all-organisatie.jsonld#L3001)

2026-06-15T12:07:37.128Z error: Found missing class or attribute (Agent): [urn:oslo-toolchain:efa684849f990ecc6958e6b72d4b19a69647231a0e0679289a2965f695f9a88e](all-organisatie.jsonld#L3189)

2026-06-15T12:07:37.128Z error: Found missing class or attribute (Activiteit): [urn:oslo-toolchain:efacad245ea79b62969da0daf0ade5e865d83c070c9882cbbfe3914cb195edbb](all-organisatie.jsonld#L3073)

2026-06-15T12:07:37.128Z error: Found missing class or attribute (Rechtspersoonlijkheidtype): [urn:oslo-toolchain:97d1d61c51ade5f969667d48474359c58da5d0db71c26053e9a8741a9ec3a790](all-organisatie.jsonld#L3102)

2026-06-15T12:07:37.128Z error: Found missing class or attribute (Rechtstoestandtype): [urn:oslo-toolchain:618dbd647f6f01e3dc0a6c17ec380c6b49d950f287e8236b4ae9558d0432281b](all-organisatie.jsonld#L3131)

2026-06-15T12:07:37.128Z error: Found missing class or attribute (Rechtsvormtype): [urn:oslo-toolchain:865a150807d8b564abfb58355bad18462cdbea169650a80b5ed23b70052c3be3](all-organisatie.jsonld#L3160)

2026-06-15T12:07:37.128Z error: Found missing class or attribute (Activiteittype): [urn:oslo-toolchain:ce33ec648a87f979a480adf0ae9432094ae55ebc747c4407068be3c8c356887f](all-organisatie.jsonld#L3218)

2026-06-15T12:07:37.128Z error: Found missing class or attribute (OrganisatieStatus): [urn:oslo-toolchain:d9a7ec207eb527cf4d84edf60323ee291e43b256c6f64baf3d01aedf52508aec](all-organisatie.jsonld#L3241)

2026-06-15T12:07:37.128Z error: Found missing class or attribute (Doorhalingstype): [urn:oslo-toolchain:aa36a7655ee4ed3d51e6d1a7efba4da85b765e444dd3d195a0d08e00f59e80ae](all-organisatie.jsonld#L3264)

2026-06-15T12:07:37.128Z error: Found missing class or attribute (RedenDoorhaling): [urn:oslo-toolchain:0ab037757b50061d05926881457fc42191d2c9331191c56da99db822e745794f](all-organisatie.jsonld#L3293)

2026-06-15T12:07:37.128Z error: Found missing class or attribute (StopzettingType): [urn:oslo-toolchain:6f44b2d4df6292ad65ee38f07919f7007331358271efd0ce6a005cc645b652c5](all-organisatie.jsonld#L3322)

2026-06-15T12:07:37.128Z info: Validation successful! All assigned URIs are whitelisted.

2026-06-15T12:07:37.128Z info: Validation successful! All sentences seem to be valid, no spelling mistakes found.

2026-06-15T12:07:37.128Z info: Validation successful! All labels seem to be valid, no spelling mistakes found.

2026-06-15T12:07:37.128Z info: Validation successful! All base URIs seem to be valid.

2026-06-15T12:07:37.128Z info: Validation found 63 missing referenced classes or attributes.

